--- a/src/index.css
+++ b/src/index.css
@@ -96,6 +96,7 @@
   --color-white: #fff;
   --color-black: #333;
   --color-point: #ff9faf;
+  --color-point-hov: #ea4661;
   --color-gray-deep: #7c7c7c;
   --color-gray-mid: #b9b9b9;
   --color-gray-light: #e6e6e6;
