--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,34 @@ a {
   font-size: var(--text-sm);
   font-weight: 500;
 }
+
+/* layout settings */
+.wrap {
+  width: 100%;
+  margin-top: 64px;
+  display: flex;
+  flex-direction: column;
+  background: var(--color-white);
+}
+
+.container {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 90%;
+    padding: 0 24px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    width: 90%;
+  }
+}
